# logo_detection

./: CMakeLists.txt  README.md  flickr.h  hash.h  index.cpp  index.h  index_file.cpp  init.cpp  lib.cpp  orb.cpp  query.h  register.cpp  test.cpp  utils.h  vocab.cpp  vocab.h
